tests/testcases/errors/BCE0054-1.boo
"""
BCE0054-1.boo(4,20): BCE0054: 'isa' expects a type reference, a System.Type instance or a type array.
"""
print("string" isa "string")
